--- a/Testing/Code/Visualization/CMakeLists.txt
+++ b/Testing/Code/Visualization/CMakeLists.txt
@@ -339,6 +339,7 @@ otbSplittedWidgetManagerNew
 
 # Testing srcs
 SET(Visualization_SRCS1
+otbVisualizationTests1.cxx
 otbImageWidgetNew.cxx
 otbImageWidget.cxx
 otbImageWidgetActionHandlerNew.cxx
@@ -386,8 +387,6 @@ otbSplittedWidgetManagerNew.cxx
 
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 
-# Building testing executables
-ADD_EXECUTABLE(otbVisualizationTests1 otbVisualizationTests1.cxx ${Visualization_SRCS1})
-TARGET_LINK_LIBRARIES(otbVisualizationTests1 OTBVisualization OTBIO OTBTesting)
+OTB_ADD_EXECUTABLE(otbVisualizationTests1 "${Visualization_SRCS1}" "OTBVisualization;OTBIO;OTBTesting")
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
